bugfix: remove overflow x on body

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  overflow-x: hidden;
 }
 
 .project-button-drop-shadow {
